# qdrant-haystack

./: .gitignore  .pre-commit-config.yaml  README.md  new.txt  pyproject.toml
.github/workflows/: integration-tests.yml  unit-integration-tests.yml
examples/: better_retrieval_via_embedding_retrieval.py  text_to_image_search_pipeline.py
src/qdrant_haystack/: __init__.py  converters.py  document_store.py  filters.py  qdrant.py  retriever.py
src/qdrant_haystack/document_store/: __init__.py  qdrant.py
src/qdrant_haystack/document_stores/: __init__.py  converters.py  filters.py  qdrant.py
src/qdrant_haystack/tests/unit/qdrant_haystack/document_stores/: test_legacy_filters.py
tests/: run-integration-tests.sh  run-tests.sh
tests/integration/: run-qdrant.sh  test_qdrant.py
tests/integration/qdrant_haystack/document_store/: test_qdrant.py
tests/integration/qdrant_haystack/document_stores/: test_qdrant.py
tests/integration/qdrant_haystack/document_stores/pipeline/: pipeline.yaml  test_haystack_pipeline.py
tests/qdrant_haystack/document_store/: test_filters.py
tests/unit/: test_dict_convertors.py  test_filters.py  test_init.py  test_legacy_filters.py  test_retriever.py
tests/unit/qdrant_haystack/document_store/: test_filters.py
tests/unit/qdrant_haystack/document_stores/: test_converters.py  test_filters.py  test_init.py  test_legacy_filters.py
