[tool.poetry]
name = "qdrant-haystack"
version = "0.0.1"
description = "An integration of Qdrant ANN vector database backend with Haystack"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
packages = [
    {include = "qdrant_haystack", from = "src"}
]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7,<=3.11"
qdrant-client = "^1.0.1"
farm-haystack = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
pythonpath = [
    "src/"
]
testpaths = [
    "tests/"
]