[tool.poetry]
name = "qdrant-haystack"
version = "2.0.1"
description = "An integration of Qdrant ANN vector database backend with Haystack"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
packages = [
    {include = "qdrant_haystack", from = "src"}
]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
qdrant-client = ">=1.1.4"
tiktoken = ">=0.5.1"
torch = {version = ">=2.0.0, !=2.0.1, !=2.1.0"}  # https://github.com/pytorch/pytorch/issues/100974
haystack-ai = "^2.0.0a3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pre-commit = "^3.1.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
flake8 = "^6.0.0"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
pythonpath = [
    "src/"
]
testpaths = [
    "tests/"
]